# Static

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  logCerr.cpp  logFmt.cpp  logFormat.cpp  logFormatLambda.cpp  logOutputStrStream.cpp  logStdio.cpp
cmake/: StaticConfig.cmake.in
include/Static/: BasicLogger.h  Format.h  FormatResult.h  Logger.h  OutputStrStream.h  ParsePrimitives.h  Span.h
src/Static/: BasicLogger.cpp  Format.cpp  ParsePrimitives.cpp  Span.cpp
test/: CMakeLists.txt  testBasicLogger.cpp  testFormat.cpp  testOutputStrStream.cpp
